--- a/_site.yml
+++ b/_site.yml
@@ -1,7 +1,7 @@
 name: "."
-title: "my website"
+title: "Waffle's page"
 description: |
-  my website
+  Waffle website
 output_dir: "docs"
 navbar:
   right:
@@ -9,7 +9,9 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
-    - text: "Blog"      # add
-      href: blog.html   # add
+    - text: "Blog"
+      href: blog.html
+    - text: "CV"
+      href: waffle_cv.html
 output: distill::distill_article
 theme: postcards.css
